test/types/range/diten/badRange2.good
badRange2.chpl:5: error: halt reached - iteration over a range with no bounds
